static settings jvm.options next: log4j